--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Git branching lesson on test</title>
 </head>
 <body>
-
+  <header>
+    <h1>Behold this heading</h1>
+    <p>This is a paragraph, technically, but realistically it is merely a sentence!</p>
+  </header>
 </body>
 </html>
