--- a/index.html
+++ b/index.html
@@ -11,5 +11,15 @@
     <h1>Behold this heading</h1>
     <p>This is a paragraph, technically, but realistically it is merely a sentence!</p>
   </header>
+
+  <footer>
+    <nav>
+      <ul>
+        <li><a href="#"></a>To top</li>
+        <li><a href="#"></a>To middle</li>
+        <li><a href="#"></a>To bottom</li>
+      </ul>
+    </nav>
+  </footer>
 </body>
 </html>
