removed broken paragraph in header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>Behold this heading</h1>
-    <p>This is a paragraph, technically, but realistically it is merely a sentence!</p>
+    <!-- <p>This is a paragraph, technically, but realistically it is merely a sentence!</p> -->
   </header>
 
   <footer>
